--- a/_data/messages.yml
+++ b/_data/messages.yml
@@ -1,4 +1,4 @@
-- message: Edit
+- message: Nulla sed ipsum dapibus, imperdiet velit eget, faucibus nisi.
   type: user
 
 - message: Nulla sed ipsum dapibus, imperdiet velit eget, faucibus nisi.
