--- a/_data/messages.yml
+++ b/_data/messages.yml
@@ -1,4 +1,4 @@
-- message: Nulla sed ipsum dapibus, imperdiet velit eget, faucibus nisi.
+- message: Proin interdum, justo eget hendrerit luctus, mauris lectus interdum elit, vel elementum sem mi sed erat.
   type: user
 
 - message: Nulla sed ipsum dapibus, imperdiet velit eget, faucibus nisi.
