--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -4,7 +4,7 @@ hero-button: Get in Touch
 
 # Below is the info next to the messages
 
-title: Lorem Newpsum
+title: Lorem Ipsum
 button: See Demonstration
 
 # Hello TJ. The style below is for paragraphs. To add another for example just start a new line and '- >' then the content
