--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -4,32 +4,15 @@ hero-button: Get in Touch
 
 # Below is the info next to the messages
 
-title: Lorem Ipsum
+title: Get Candidate Availability Like Never Before 
 button: See Demonstration
 
 # Hello TJ. The style below is for paragraphs. To add another for example just start a new line and '- >' then the content
 # inline with the '>' as below. Looking for a cleaner way to let you edit stuff. I know there is.
 content:
   - >
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla et scelerisque tellus,
-    eu sollicitudin sapien. Suspendisse iaculis erat nisi, nec finibus ipsum pellentesque
-    quis. Vestibulum dignissim in urna in suscipit. Duis viverra tortor ac felis mattis
-    vulputate at a libero. Nullam eget facilisis dolor.
-    Curabitur id arcu ac mi aliquam placerat. Proin pharetra nunc et sodales porttitor.
-    Interdum et malesuada fames ac ante ipsum primis in faucibus. In hac habitasse platea dictumst.
-    Donec porttitor varius finibus. Suspendisse porttitor leo urna, eget ullamcorper diam suscipit at.
-    Nullam varius quam congue nibh vehicula posuere.
+    Apentu provides temporary recruitment agencies with a powerful competitive advantage. Apentu collects the availability of your temps at a time to suit them, and delivers it to your consultants at a time to suit you. Apentu only works out of hours, to ensure that your availibility is more up to date than your competitors- so you can start the day one step ahead of the competition.
 
+  
   - >
-    Duis viverra et diam mollis ultrices. Morbi sed sapien vel mauris consequat tempor.
-    Fusce efficitur nisi vel elit viverra tempus. Aenean eget orci ultricies,
-    vehicula lectus sit amet, lobortis nulla. Phasellus egestas felis
-    leo, nec maximus nibh congue eu. Pellentesque lacinia risus eget sapien ornare,
-    nec semper ex fringilla. Sed ac purus mauris. Nulla molestie fermentum eros a feugiat.
-
-  - >
-    Curabitur semper ipsum quis sapien ornare finibus. Interdum et malesuada fames ac ante ipsum
-    primis in faucibus. In nec nisi aliquam, hendrerit nisi id, vulputate purus. Pellentesque placerat
-    eleifend nunc, sed ultrices dui venenatis eu. Sed nec tincidunt magna. Morbi sed elit a metus tincidunt
-    commodo. Duis vestibulum velit quis sollicitudin dapibus. Phasellus faucibus commodo erat, vitae
-    consectetur neque.
+    Best of all, the process is entirely automated and self-managing. So your consultants can spend more time on business development, less time doing repetitive tasks.
