--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -11,7 +11,11 @@ button: See Demonstration
 # inline with the '>' as below. Looking for a cleaner way to let you edit stuff. I know there is.
 content:
   - >
-    Apentu provides temporary recruitment agencies with a powerful competitive advantage. Apentu collects the availability of your temps at a time to suit them, and delivers it to your consultants at a time to suit you. Apentu only works out of hours, to ensure that your availibility is more up to date than your competitors- so you can start the day one step ahead of the competition.
+    Apentu provides temporary recruitment agencies with a powerful competitive advantage. 
+  - >
+    Apentu collects the availability of your temps at a time to suit them, and delivers it to your consultants at a time to suit you. 
+  - >
+    Apentu only works out of hours, to ensure that your availibility is more up to date than your competitors- so you can start the day one step ahead of the competition.
 
   
   - >
