pricing cards adjusted, yml files added for both contact and pricing.

--- a/_data/pricing-features.yml
+++ b/_data/pricing-features.yml
@@ -1,59 +1,59 @@
-- name: Lorem
+- name: Lorem ipsum dolor sit amet
   basic: true
   standard: true
   premium: true
 
-- name: Ipsum
+- name: Lorem ipsum dolor sit amet
   basic: true
   standard: true
   premium: true
 
-- name: Lorem
+- name: Lorem ipsum dolor sit amet
   basic: true
   standard: true
   premium: true
 
-- name: Ipsum
+- name: Lorem ipsum dolor sit amet
   basic: true
   standard: true
   premium: true
 
-- name: Lorem
+- name: Lorem ipsum dolor sit amet
   basic: false
   standard: true
   premium: true
 
-- name: Ipsum
+- name: Lorem ipsum dolor sit amet
   basic: true
   standard: true
   premium: true
 
-- name: Lorem
+- name: Lorem ipsum dolor sit amet
   basic: false
   standard: true
   premium: true
 
-- name: Ipsum
-  basic: false
-  standard: false
-  premium: true
-
-- name: Lorem
+- name: Lorem ipsum dolor sit amet
   basic: false
   standard: false
   premium: true
 
-- name: Ipsum
+- name: Lorem ipsum dolor sit amet
   basic: false
   standard: false
   premium: true
 
-- name: Lorem
+- name: Lorem ipsum dolor sit amet
+  basic: false
+  standard: false
+  premium: true
+
+- name: Lorem ipsum dolor sit amet
   basic: true
   standard: true
   premium: true
 
-- name: Ipsum
+- name: Lorem ipsum dolor sit amet
   basic: true
   standard: true
   premium: true
