--- a/_data/pricing-info.yml
+++ b/_data/pricing-info.yml
@@ -1,9 +1,8 @@
 title: Pricing
 
-blurb: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent fringilla consequat massa ac lacinia. Nulla rhoncus mi sit amet enim sagittis consequat.
+blurb: Apentu is priced on how many candidates you message each month. If there is no plan that looks right for you, simply contact us. We can be create a personal plan to suite you.
 
-basic-blurb: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent fringilla consequat massa ac lacinia. Nulla rhoncus mi sit amet enim sagittis consequat.
+basic-blurb: Up to 250 candidates per month
 
-standard-blurb: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent fringilla consequat massa ac lacinia. Nulla rhoncus mi sit amet enim sagittis consequat.
-
-premium-blurb: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent fringilla consequat massa ac lacinia. Nulla rhoncus mi sit amet enim sagittis consequat.
+standard-blurb: Up to 500 candidates per month
+premium-blurb: Up to 1000 candidates per month
