--- a/_data/messages.yml
+++ b/_data/messages.yml
@@ -1,4 +1,4 @@
-- message: Hi Sarah, ABC Agency here. Are you availability for work tomorrow?
+- message: Hi Sarah, ABC Agency here. Are you available for work tomorrow?
   type: apentu
 
 - message: Sure thing.
