--- a/_data/pricing-info.yml
+++ b/_data/pricing-info.yml
@@ -2,7 +2,15 @@ title: Pricing
 
 blurb: Apentu is priced on how many candidates you message each month. If there is no plan that looks right for you, simply contact us. We can be create a personal plan to suite you.
 
+
+basic-title: Small Agency
 basic-blurb: Up to 250 candidates per month
 
+standard-title: Medium Agency
 standard-blurb: Up to 500 candidates per month
-premium-blurb: Up to 1000 candidates per month
+
+premium-title: Large Agency
+premium-blurb: Up to 1,000 candidates per month
+
+enterprise-title: Starship Agency
+enterprise-blurb: Up to 10,000 candidates per month
