--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -15,7 +15,7 @@ content:
   - >
     Apentu collects the availability of your temps at a time to suit them, and delivers it to your consultants at a time to suit you. 
   - >
-    Apentu only works out of hours, to ensure that your availibility is more up to date than your competitors- so you can start the day one step ahead of the competition.
+    Apentu only works out of hours, to ensure that your availability is more up to date than your competitors- so you can start the day one step ahead of the competition.
 
   
   - >
