--- a/_data/home-features.yml
+++ b/_data/home-features.yml
@@ -10,9 +10,9 @@ card-features:
 
     text: Apentu collects candidate availability out of normal hours at a time to suit them. So your availability list is always more up to date than your competitors.
 
-  - title: Increase consultant effeciency
+  - title: Increase consultant efficiency
     icon: <i class="fa fa-users" aria-hidden="true"></i>
-    text: Apentu can contact thousands of candidates symoltaneously. Freeing up your consultants to do, what they do best. 
+    text: Apentu can contact thousands of candidates simultaneously. Freeing up your consultants to do, what they do best. 
     
   - title: More time at critical points in your day
     icon: <i class="fa fa-clock-o" aria-hidden="true"></i>
