--- a/_data/home-features.yml
+++ b/_data/home-features.yml
@@ -16,4 +16,4 @@ card-features:
     
   - title: More time at critical points in your day
     icon: <i class="fa fa-clock-o" aria-hidden="true"></i>
-    text: No more calling around candidates to see who is availability at bookout times. Just placement after gorious placement.
+    text: No more calling around candidates to see who is availability at book out times. Just placement after glorious placement.
