--- a/_data/pricing-info.yml
+++ b/_data/pricing-info.yml
@@ -4,13 +4,13 @@ blurb: Apentu is priced on how many candidates you message each month. If there 
 
 
 basic-title: Small Agency
-basic-blurb: Up to 250 candidates per month
+basic-blurb: Contact up to 250 candidates per month
 
 standard-title: Medium Agency
-standard-blurb: Up to 500 candidates per month
+standard-blurb: Contact up to 500 candidates per month
 
 premium-title: Large Agency
-premium-blurb: Up to 1,000 candidates per month
+premium-blurb: Contact up to 1,000 candidates per month
 
-enterprise-title: Starship Agency
-enterprise-blurb: Up to 10,000 candidates per month
+enterprise-title: Enterprise Agency
+enterprise-blurb: More than 1,000 candidates per month
